--- a/dezoomcamp/requirements.txt
+++ b/dezoomcamp/requirements.txt
@@ -2,3 +2,11 @@ requests==2.27.1
 streamlit==1.28.0
 streamlit_book==0.7.5
 st-pages
+
+
+pandas==1.3.3
+numpy==1.21.2
+scikit-learn==0.24.2
+plotly==5.3.1
+streamlit==0.90.0
+joblib==1.1.0
