--- a/dezoomcamp/requirements.txt
+++ b/dezoomcamp/requirements.txt
@@ -1,12 +1,14 @@
+joblib==1.3.2
+numpy==1.26.2
+pandas==2.1.4
+plotly==5.22.0
 requests==2.27.1
+scikit-base==0.7.8
+scikit-learn==1.4.1.post1
+scikit-time==0.0.0
 streamlit==1.28.0
 streamlit_book==0.7.5
 st-pages
 
 
-pandas==1.3.3
-numpy==1.21.2
-scikit-learn==0.24.2
-plotly==5.3.1
-streamlit==0.90.0
-joblib==1.1.0
+
